# 404vault

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  ROADMAP.md  SESSION_NOTES.md  TODO.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  start.sh
.github/workflows/: ci.yml
docs/: medium-article.md
scripts/: seed_community_brain.py
sdk/javascript/: README.md  package-lock.json  package.json
sdk/javascript/src/: client.ts  errors.ts  index.ts  types.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/clawdex/: __init__.py  client.py  errors.py  types.py
sdk/python/src/vault404/: __init__.py  client.py  errors.py  types.py
sdk/python/tests/: test_client.py
src/clawdex/: __init__.py  cli.py  mcp_server.py
src/clawdex/security/: __init__.py  encryption.py  redactor.py
src/clawdex/storage/: __init__.py  local_storage.py  mempalace_adapter.py  schemas.py
src/clawdex/sync/: __init__.py  anonymizer.py  community.py  contribution.py
src/clawdex/tools/: __init__.py  contributing.py  maintenance.py  querying.py  recording.py
src/vault404/: __init__.py  cli.py  mcp_server.py
src/vault404/api/: __init__.py  auth.py  models.py  routes.py  server.py
src/vault404/recall/: analytics.py  schemas.py  tracker.py
src/vault404/search/: __init__.py  embeddings.py  ranker.py  strategies.py
src/vault404/security/: __init__.py  encryption.py  redactor.py
src/vault404/storage/: __init__.py  local_storage.py  mempalace_adapter.py  schemas.py
src/vault404/sync/: __init__.py  anonymizer.py  community.py  contribution.py
src/vault404/tools/: __init__.py  contributing.py  maintenance.py  querying.py  recording.py  vulnerability.py
supabase/migrations/: 20260411_community_brain.sql
tests/: test_api_auth.py  test_mcp_tools.py  test_ranker.py  test_semantic_search.py
web/: index.html  vercel.json
