[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawdex"
version = "0.1.0"
description = "Python SDK for Clawdex - the collective AI coding agent brain"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Clawdex Contributors" }
]
keywords = [
    "ai",
    "coding",
    "agent",
    "knowledge-base",
    "error-tracking",
    "solutions",
    "patterns",
    "decisions",
    "mcp",
    "claude",
    "openai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
    "httpx>=0.25",  # For testing
]

[project.urls]
Homepage = "https://clawdex.dev"
Documentation = "https://github.com/globallayer/clawdex"
Repository = "https://github.com/globallayer/clawdex"
Issues = "https://github.com/globallayer/clawdex/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/clawdex"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
