[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "404vault"
version = "0.1.0"
description = "Python SDK for 404vault - the collective AI coding agent brain"
readme = "README.md"
license = "MIT"
authors = [
    { name = "GlobalLayer" }
]
keywords = [
    "ai",
    "coding",
    "agent",
    "knowledge-base",
    "error-tracking",
    "solutions",
    "patterns",
    "decisions",
    "mcp",
    "openai",
    "llm",
    "404vault",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://404vault.dev"
Documentation = "https://github.com/globallayer/404vault"
Repository = "https://github.com/globallayer/404vault"
Issues = "https://github.com/globallayer/404vault/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vault404"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
